// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TeaserItem /> Matches the Teaser Item Default snapshot 1`] = `
<article
  className="teaserItem"
  typeof="sioc:Item foaf:Document"
>
  <div
    className="titleWrap"
  >
    <h4
      className="title"
    >
      <a
        className="link"
        href="/"
      >
        Test Title
      </a>
    </h4>
    <span
      content="Test Title"
      property="dc:title"
    />
  </div>
  <p
    className="program"
  >
    <a
      className="link"
      href="programs/"
    >
      test Program
    </a>
  </p>
</article>
`;

exports[`<TeaserItem /> Matches the Teaser Item without program or audio snapshot 1`] = `
<article
  className="teaserItem"
  typeof="sioc:Item foaf:Document"
>
  <div
    className="titleWrap"
  >
    <h4
      className="title"
    >
      <a
        className="link"
        href="/"
      >
        Test Title
      </a>
    </h4>
    <span
      content="Test Title"
      property="dc:title"
    />
  </div>
</article>
`;

exports[`<TeaserItem /> Matches the Teaser Item without program snapshot 1`] = `
<article
  className="teaserItem"
  typeof="sioc:Item foaf:Document"
>
  <div
    className="titleWrap"
  >
    <h4
      className="title"
    >
      <a
        className="link"
        href="/"
      >
        Test Title
      </a>
    </h4>
    <span
      content="Test Title"
      property="dc:title"
    />
  </div>
</article>
`;
